Fixed modal spacing

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,6 @@ body {
 
 .example {
   padding-left: 12px;
-  transform: translate(0%, -50%);
 }
 
 .home-button {
